[package]
name = "miniconf-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-futures = "0.1.1"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
heapless = { version = "0.8.0", features = ["serde"] }
miniconf = { git = "https://github.com/quartiq/miniconf", branch = "lookup", features = ["postcard", "json-core"] }
postcard = "1.0.8"
sequential-storage = { git = "https://github.com/tweedegolf/sequential-storage.git", version = "2.0.0" }
serde = { version = "1.0.199", default-features = false }
